# flip_book

./: .gitignore  README.md  flip_book.py  setup.cfg
