[metadata]
name = flip_book
version = 0.0.0
description = text file flip book using curses
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tech-chad/flip_book
author = Chad Larson
author_email = techchad2@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
py_modules = flip_book
install_requires:

python_requires = >= 3.6.1

[options.packages.find]
exclude =
    tests*
    tests

[options.entry_points]
console_scripts =
    flip_book = flip_book:main